--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Form::Tiny.
 
+1.11  Tue Jan 5 14:00:00 2021
+	- fix broken release
+
 1.10  Tue Jan 5 13:00:00 2021
 	- add syntactic sugar mode with -flag import
 	- improve documentation
