--- a/lib/Form/Tiny/Manual.pod
+++ b/lib/Form/Tiny/Manual.pod
@@ -6,33 +6,48 @@ Form::Tiny::Manual - reference for working with Form::Tiny
 
 =head1 SYNOPSIS
 
+	# first ...
+	package SomeForm;
+
 	use Form::Tiny -base;
 	use Types::Common::String qw(SimpleStr);
 	use Types::Common::Numeric qw(PositiveInt);
 
-
-	form_field "name" => (
+	form_field 'name' => (
 		type => SimpleStr,
 		adjust => sub { ucfirst shift },
 		required => 1,
 	);
 
-	form_field "lucky_number" => (
+	form_field 'lucky_number' => (
 		type => PositiveInt,
 		required => 1,
 	);
 
-	form_cleaner sub {
+	form_hook cleanup => sub {
 		my ($self, $data) = @_;
 
-		if ($data->{name} eq "Perl" && $data->{lucky_number} == 6) {
-			$self->add_error(
-				Form::Tiny::Error::DoesNotValidate->new(
-					error =>"Perl6 is now Raku"
-				)
-			);
-		}
+		$self->add_error('Perl6 is now Raku')
+			if $data->{name} eq "Perl"
+			&& $data->{lucky_number} == 6;
 	};
+
+	# then ...
+
+	use Data::Dumper;
+	my $form = SomeForm->new;
+
+	$form->set_input({
+		name => 'perl',
+		lucky_number => 6,
+	});
+
+	if ($input->valid) {
+		print Dumper $form->fields;
+	}
+	else {
+		print Dumper $form->errors;
+	}
 
 =head1 DESCRIPTION
 
@@ -46,70 +61,54 @@ The module itself isn't much more than a hashref filter - it accepts one as inpu
 
 	input
 	  |
-	  |--> filtering -- coercion -- validation -- adjustment -- cleaning --|
-	                                                                       v
-	                                                                     output
+	  |--> filtering -- coercion -- validation -- adjustment -- cleanup --|
+	                                                                      v
+	                                                                    output
 
 I<(Note that not every step on that pipeline is ran every time - it depends on form configuration)>
 
 The module always tries to get as much data from input as possible and copy that into output. B<It will never copy any data that is not explicitly specified in the form fields configuration>.
 
-=head2 Moose-like syntax sugar
+=head2 Moose-like form domain-specific language
 
-Starting with version 1.10, Form::Tiny now allows and encourages you to define forms much like you would define a Moose class. The new syntax is presented below:
+Form::Tiny allows you to define forms much like you would define a Moose class. The syntax is showcased below:
 
-	use Form::Tiny -base, -filtered; # -strict is also possible
+	use Form::Tiny -base, -filtered;
+	use Types::Standard qw(Enum Str);
 
-	# basic form field definitions
-	form_field 'name' => (
-		type => Int,
+	form_trim_strings;
+
+	form_field 'url' => (
+		type => Str,
 		required => 1,
-		... # the rest of a normal Form::Tiny field definition
 	);
 
-	form_field 'surname' => (
-		...
+	form_field 'action' => (
+		type => Enum[qw(GET POST PUT DELETE)],
+		default => sub { 'GET' },
 	);
 
-	# will run the sub for cleaning up the form
-	form_cleaner sub {
+	form_hook cleanup => sub {
 		my ($self, $data) = @_;
 		... # perform cleaning
 	};
 
-	# will filter Int values before they get validated
-	form_filter Int, sub { abs shift };
+Adding any flag to C<use Form::Tiny> line will cause your current package to be turned into a form by composing L<Form::Tiny::Form> into it (and as a result, merging all of its symbols with your package). It also imports Moo into your namespace for convenience (unless you specify C<-nomoo> flag). Refer to L<Form::Tiny/"Available import flags"> for a full list of available flags.
 
-Adding any argument to C<use Form::Tiny> line will cause it to enable this syntax. Currently supported flags are:
-
-=over
-
-=item * C<-base> - imports Moo into your package (turning it into a Moo class and enabling all Moo keywords), mixes in the L<Form::Tiny> role and adds C<form_field> and C<form_cleaner> functions to your namespace. This flag is optional if you specify any other flag for the import.
-
-=item * C<-strict> - mixes in the L<Form::Tiny::Strict> role.
-
-=item * C<-filtered> - mixes in the L<Form::Tiny::Filtered> role and adds C<form_filter> function to your namespace.
-
-=back
-
-This way you can have syntax that resembles and mixes in with Moose syntax. This may however be a suboptimal option if for example you want your class to use Moose instead of Moo or have more control over class building.
-
-=head2 Composing as a role
-
-If you don't want to have Moo imported automatically or want to create something a bit more complicated or custom, see L<Form::Tiny::Manual::Internals>.
+This syntax is designed to resemble and mix in nicely with Moo/se syntax. Form fields and class properties are completely separate and can be freely intermixed with each other.
 
 =head2 Basic usage
 
-Input can be passed as a hashref to the constructor or with the I<set_input> method. Every call to that method will cause the form instance to be cleared, so that it can be used again for different data.
+Input can be passed as a scalar to the constructor or with the I<set_input> method. Every call to that method will cause the form instance to be cleared of old errors and fields, so that it can be used again for different data.
 
 	use MyForm;
 
 	# either ...
-	my $form = MyForm->new(input => \%data);
+	my $form = MyForm->new(input => $data);
 
 	# or ...
 	my $form = MyForm->new;
-	$form->set_input(\%data);
+	$form->set_input($data);
 
 With input in place, a I<valid> method can be called, which will return a validation result and fill in the I<errors> and I<fields> properties. These properties are mutually exclusive: errors are only present if the validation is unsuccessful, otherwise the fields are present.
 
@@ -132,29 +131,30 @@ The example below illustrates how a form class could be used to validate data.
 
 You can use I<form_field> function to declare form fields, just like you would use I<has> to declare class properties in Moo/se.
 
-Each of field definition will be coerced into an object of the L<Form::Tiny::FieldDefinition> class.
+Each of field definitions will be coerced into an object of the L<Form::Tiny::FieldDefinition> class.
 
 	form_field 'some_name';
 	form_field 'another_name' => (
 		required => 'soft',
 	);
 
-	form_field 'complex_field' => sub {
+	form_field sub {
 		my ($self) = @_;
 
 		return {
+			name => 'complex_field',
 			required => 1,
 			adjust => sub { $self->some_method(shift) },
 		};
 	};
 
-The only required element of this hashref is key I<name>, which contains the string with name of the field in the form input. In I<form_field>, the name B<should not> be given explicitly, as it will be automatically overwritten by the first argument to that function. Other possible elements are:
+The only required element in hashes defining the fields is the key I<name>, which contains the string with name of the field in the form input. In the most basic style of I<form_field>, the name B<should not> be given explicitly, as it will be automatically overwritten by the first argument to that function. Other possible elements are:
 
 =over
 
 =item type
 
-The type that the field will be validated against. Effectively, this needs to be an object with I<validate> and I<check> methods implemented. All types from Type::Tiny meet this criteria.
+The type that the field will be validated against. Effectively, this needs to be an object with C<validate> and C<check> methods implemented. All types from Type::Tiny type libraries, as well as all Form::Tiny forms meet this criteria.
 
 =item coerce
 
@@ -210,16 +210,26 @@ While building your form fields, it's possible to save some extra data along wit
 
 The data field can hold any value you want and later retrieved with an instantiated form object:
 
-	for my $def (@{$form->field_defs}) {
-		say "field: " . $def->name;
-		say "data: " . Dumper($def->data);
+	for my $definition (@{$form->field_defs}) {
+		say "field: " . $definition->name;
+		say "data: " . Dumper($definition->data);
 	}
 
 =back
 
-=head2 Cleaning
+=head2 Hooks
 
-While the above properties allow for single-field validation, sometimes a need arises to check if some fields are synchronized correctly, or even to perform some more complex validation. This can be done with the I<cleaner> method, which will be only fired after the validation for every individual field was successful. The cleaner subroutine should look like this:
+	form_hook HOOK_NAME => $coderef;
+
+Hooks are the way to introduce more behavior to the form, not achievable with single field validation. Each type of hook can have multiple code references assigned to it, and they will fire in the order of declaration.
+
+Each hook type defines its own set of parameters that get passed to the C<$coderef>. Most hooks require you to return they last parameter that got passed and you're free to change it however you like. If a hook does not require you to return the value, the return value is discarded.
+
+Hook types are listed below:
+
+=head3 cleanup
+
+While regular properties allow for single-field validation, sometimes a need arises to check if some fields are synchronized correctly, or even to perform some more complex validation. This can be done with the C<cleaup> hook, which will be only fired once after the validation for every individual field was successful. The cleaner subroutine should look like this:
 
 	sub {
 		my ($self, $data) = @_;
@@ -228,84 +238,96 @@ While the above properties allow for single-field validation, sometimes a need a
 		# call $self->add_error if necessary
 	};
 
-A subroutine like the one above should either be returned by I<build_cleaner> method, or specified in a I<form_cleaner> helper call.
+A subroutine like the one above should either be specified in a I<form_hook> or in a I<form_cleaner> shortcut.
 
 	# either ...
-	sub build_cleaner {
-		return sub { ... }; # cleaner sub
-	}
+	form_hook cleanup => sub { ... };
 
-	# or
+	# or ...
 	form_cleaner sub { ... };
 
-Cleaning sub is also allowed to change the $data, which is a hash reference to the running copy of the input. Note that this is the final step in the validation process, so anything that is in $data after cleaning will be available in the form's I<fields> after validation.
+Cleaning sub is also allowed to change C<$data>, which is a hash reference to the running copy of the input. Note that this is the final step in the validation process, so anything that is in $data after the cleanup will be available in the form's I<fields> after validation. The hook coderef need not to return the C<$data>, as it is a hash reference and will be updated just by changing it.
 
-=head2 Optional behavior
+=head3 before_mangle
 
-Attaching more behavior to the form is possible by overriding I<pre_mangle> and I<pre_validate> methods in the final class. These methods do nothing by default, but roles that are introducing extra behavior set up C<around> hooks for them. It's okay not to invoke the SUPER version of these methods if you're overriding them, but you need to explicitly return the value you're passed in these methods.
+B<before_mangle> is fired for every field, just before it is changed ("mangled"). In addition to an object reference, this method will be passed the definition of the field (L<Form::Tiny::FieldDefinition>) and a scalar value of the field. The field must exist in the input data for this method to fire, but can be undefined. The return value of this method will become the new value for the field.
 
-B<pre_mangle> is fired for every field, just before it is changed ("mangled"). In addition to an object reference, this method will be passed the definition of the field (L<Form::Tiny::FieldDefinition>) and a scalar value of the field. The field must exist in the input data for this method to fire, but can be undefined. The return value of this method will become the new value for the field.
-
-	sub pre_mangle {
+	form_hook before_mangle => sub {
 		my ($self, $field_definition, $value) = @_;
 
 		# do something with $value
 
 		# don't forget to return!
 		return $value;
-	}
+	};
 
-B<pre_validate> is fired just once for the form, before any field is validated. It is passed a single hashref - a copy of the input data. This method is free to do anything with the input, and its return value will become the real input to the validation.
+=head3 before_validate
 
-	sub pre_validate {
+B<before_validate> is fired just once for the form, before any field is validated. It is passed a single hashref - a copy of the input data. This method is free to do anything with the input, and its return value will become the real input to the validation.
+
+	form_hook before_validate => sub {
 		my ($self, $input_data) = @_;
 
 		# do something with $input_data
 
 		# don't forget to return!
 		return $input_data;
-	}
+	};
 
-The module provides two roles which use these mechanisms to achieve common tasks.
+=head2 Optional behavior
 
-=over
+The module provides optional predefined behaviors which can be enabled with an import flag.
 
-=item * L<Form::Tiny::Strict>
+=head3 Strict mode
 
-Enables strict mode for the form. Validation will fail if the form input contains any data not specified in the field definitions. Can also be mixed in with I<-strict> flag.
+Turned on with the C<-strict> flag in L<Form::Tiny>.
 
-=item * L<Form::Tiny::Filtered>
+Enables strict mode for the form. Validation will fail if form input contains any data not specified in the field definitions. This additional check is added to the form as a C<before_validate> hook.
 
-Enables initial filtering for the input fields. By default, this will only cause strings to be trimmed, but any code can be attached to any field that meets a given type constraint. See the role documentation for details. Can also be mixed in with I<-filtered> flag.
+Strict mode is helpful when you want to make sure you're not getting any extra data in your input. It does not affect the output of forms, only the validation result. Form::Tiny does not copy fields that are not declared explicitly to output regardless of the Strict mode being turned on.
 
-=back
+=head3 Filters
+
+Turned on with the C<-filtered> flag in L<Form::Tiny>.
+
+Enables initial filtering for the input fields. This behavior is added to the form as a C<before_mangle> hook.
+
+The filtering system performs a type check on field values and only apply a filtering subroutine when the type matches. This is done before the validation, and so can affect the validation result. An example filter that turns integers into their absolute values:
+
+	form_filter Int, sub { abs shift() };
+
+One special keyword exists for string trimming using the filters system:
+
+	form_trim_strings;
 
 =head2 Inline forms
 
-The module also enables a way to create a form without the need of a dedicated package. This is done with the L<Form::Tiny::Inline> class. This requires the user to pass all the data to the constructor, as shown in the example:
+The module enables a way to create a form without the need of a dedicated package. This is done with the L<Form::Tiny::Inline> class. This requires the user to pass all the data to the constructor, as shown in the example:
 
-	my $form = Form::Tiny::Inline # An inline form ...
-	           ->is(qw/Strict/)   # ... with the strict role mixed in (strict mode) ...
-	           ->new(             # ... will be created with properties:
+	my $form = Form::Tiny::Inline          #     An inline form ...
+	           ->is(qw/strict filtered/)   # ... with the strict mode and filters enabled ...
+	           ->new(                      # ... will be created with properties:
 		field_defs => [{name => "my_field"}],
 		cleaner => sub { ... },
 	);
 
-The names changes a little - form_fields calls become a I<field_defs> property, I<form_cleaner> becomes just a I<cleaner> property. For filtered forms, I<form_filter> becomes I<filters> property.
+The possible constructor arguments are C<field_defs> (aref of hashrefs), C<filters> (aref of arefs, only when C<filtered>) and C<cleaner> (coderef). The same syntax as for regular helpers will work.
+
+There's no way to define custom hooks (other than a single C<cleaner>) in inline forms. Additionally, a special case exists for the C<filtered> inline forms, as they will act as if you declared C<form_trim_strings> in their classes.
 
 =head2 Advanced topics
 
-=head3 Nested fields
+=head3 Nesting
 
 A dot (I<.>) can be used in the name of a field to express hashref nesting. A field with C<< name => "a.b.c" >> will be expected to be found under the key "c", in the hashref under the key "b", in the hashref under the key "a", in the root input hashref.
 
-This is the default behavior of a dot in a field name, so if what you want is the actual dot it has to be preceded with a backslash (I<\.>).
+This is the default behavior of a dot in a field name, so if what you want is the actual dot it has to be preceded with a literal backslash (I<\.>, which is C<'\\.'> in a string). Additionally, having a literal backslash in field name requires you to escape it as well (I<\\>, which is C<'\\\\'> in a string).
 
 =head3 Nested arrays
 
-Nesting adds many new options, but it can only handle hashes. Regular arrays can of course be handled by I<ArrayRef> type from Type::Tiny, but that's a hassle. Instead, you can use a star (I<*>) as the only element inside the nesting segment to expect an array there. Adding named fields can be resumed after that, but needn't.
+Nesting adds many new options, but in the example above we're only talking about hashes. Regular arrays can of course be handled by I<ArrayRef> type from Type::Tiny, but that's a hassle and makes it impossible to have any deeper structure defined in a name. Instead, you can use a star (I<*>) as the only element inside the nesting segment to expect an array there. Adding named fields can be resumed after that, but needn't.
 
-For example, C<< name => "arr.*.some_key" >> expects I<arr> to be an array reference, with each element being a hash reference containing a key I<some_key>. Note that any array element that fails to contain wanted hash elements will cause the field to be ignored in the output (since input does not meet the specification entirely). If you want the validation to fail instead, you need to make the nested element required.
+For example, C<< name => "arr.*.some_key" >> expects I<arr> to be an array reference, with each element being a hash reference containing a key I<some_key>. Note that any array element that fails to contain wanted hash elements B<will cause the field to be ignored in the output> (since input does not meet the specification entirely). If you want the validation to fail instead, you need to make the nested element required.
 
 	# This input data ...
 	{
@@ -316,10 +338,13 @@ For example, C<< name => "arr.*.some_key" >> expects I<arr> to be an array refer
 		]
 	}
 
-	# Would not get copied into output and ignored, because the second element does not meet the specification
+	# Would not get copied into output and ignored,
+	# because the second element does not meet the specification.
 	# Make the element required to make the validation fail instead
 
 Other example is two nested arrays that not necessarily contain a hash at the end: C<< name => "arr.*.*" >>. The leaf values here can be simple scalars.
+
+If you want a hash name consisted of star character C<*> alone, you can prepend it with a literal backslash, much like the nesting operator: I<\*>, which in perl string must be written as C<'\\*'>
 
 =head3 Nested forms
 
@@ -378,7 +403,7 @@ It is possible and often very helpful to have both form and class fields inside 
 		}
 	};
 
-While doing so, make sure not to override any of the Form::Tiny symbols (Moo / Moose should complain about it when it happens).
+While doing so, make sure not to override any of the Form::Tiny::Form symbols (Moo / Moose should complain about it when it happens).
 
 =head1 SEE ALSO
 
@@ -386,6 +411,6 @@ While doing so, make sure not to override any of the Form::Tiny symbols (Moo / M
 
 =item * L<Type::Tiny>, the awesome type system
 
-=item * L<Form::Tiny>, the base class for this distribution
+=item * L<Form::Tiny>, the importer and base class for this distribution
 
 =back
