--- a/lib/Form/Tiny/Manual/Internals.pod
+++ b/lib/Form/Tiny/Manual/Internals.pod
@@ -54,7 +54,7 @@ The code above should result in a form that has the same capabilities as the one
 
 	package MyForm;
 
-	use Form::Tiny -base;
+	use Form::Tiny;
 
 	form_field 'field-name' => (
 		required => 1,
