General documentation work

--- a/lib/Form/Tiny/Manual/Compatibility.pod
+++ b/lib/Form/Tiny/Manual/Compatibility.pod
@@ -97,6 +97,14 @@ In the past, it was possible to define a form by defining three methods in the p
 
 If you happened to use the module during its early days, you must adjust your code to the new DSL style. It should not require drastic changes, but rather moving declarations out from class methods to DSL keywords. Refer to L<Form::Tiny/"Form domain-specific language"> for details.
 
+=head1 FUTURE COMPATIBILITY
+
+Starting from version I<2.00>, any backward incompatible changes will only be introduced to the module after a 3 month deprecation period. This does not cover bug fixes and changes to internal methods not meant to be used or depended on.
+
+=head2 Current deprecations
+
+None at the moment.
+
 =head1 SEE ALSO
 
 =over
